--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,5 +8,5 @@
         {{ end }}
     </ul>
     
-    <a href="{{ "/posts/" | relURL }}">All posts →</a>
+    <a href="{{ "/posts/" | absURL }}">All posts →</a>
 {{ end }}
