Simplify blog design: remove sidebar, clean up terminal styling
- Remove sidebar completely for cleaner full-width layout
- Update header to show 'nate.green - blog'
- Remove $ symbols from post links for simplified aesthetic
- Change 'ls posts/' to 'view all posts' for better UX
- Maintain terminal color scheme and typography

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,6 @@
             {{ end }}
         </ul>
         
-        <p><a href="{{ "posts/" | relURL }}">ls posts/</a></p>
+        <p><a href="{{ "posts/" | relURL }}">view all posts</a></p>
     </div>
 {{ end }}
