Update blog title to 'lab notes' and add main site link
- Change blog title from 'blog' to 'lab notes' to match experimental theme
- Split header into two clickable parts: nate.green (→ main site) and lab notes (→ blog home)
- Add CSS styling for both links with hover effects
- Maintain terminal green color scheme throughout
- Improve navigation UX between main site and blog

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,10 @@
     <ul>
       <li class="nomarker">
         <h1 class="page__logo">
-          <a href="{{ .Site.BaseURL }}" class="page__logo-inner">{{ .Site.Title }}</a>
+          <div class="page__logo-inner">
+            <a href="https://nate.green" class="main-site-link">nate.green</a>
+            <span class="blog-title"> - <a href="{{ .Site.BaseURL }}">lab notes</a></span>
+          </div>
           <span class="page__subtitle">software engineer, researcher, musician, theater maker</span>
         </h1>
       </li>
